Stopping Point on Smallest CSS

--- a/baseStylesheet.css
+++ b/baseStylesheet.css
@@ -318,9 +318,7 @@ table {
         margin: 0 auto;
     }
     
-    form {
-        width: 230px;
-    }
+    
     
     input.searchBar {
         width: 100px;
@@ -402,6 +400,25 @@ table {
         display: none;
     }
     
+    a.button {
+        padding-left: 5px;
+        padding-right: 5px;
+        margin: 0 3px;
+    }
+    
+    div.button-container {
+        width: 358px;
+        margin: 0 auto;
+    }
+    
+    form {
+        width: 210px;
+    }
+    
+    input.searchBar, input.SearchButton {
+        margin: 0 3px;
+    }
+    
     div.file-container {
         bottom: 1%;
     }
@@ -421,8 +438,9 @@ table {
     }
     
     a.folder {
-        font-size: 30px;
+        font-size: 25px;
         margin: 5px 0;
+        padding-bottom: -5px;
     }
     
     div.folder {
@@ -430,6 +448,11 @@ table {
         width: 30px;
         height: 30px;
         margin-right: 7px;
+        margin-bottom: -5px;
+    }
+    
+    div.file {
+        margin-left: 10px;
     }
     
     div.files {
